<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <TextView
        android:id="@+id/txt_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="38sp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidline_horizontal" />

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/box_username"
        app:layout_constraintTop_toBottomOf="@id/txt_judul" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/input_username"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ipt_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/box_username"
        app:layout_constraintTop_toBottomOf="@id/box_username" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/iput_password"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ipt_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:cornerRadius="10dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:backgroundTint="@color/teal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_password"
        app:layout_constraintEnd_toEndOf="parent">
    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>